tests/baselines/reference/typeofExternalModules.errors.txt
==== tests/cases/compiler/typeofExternalModules_core.ts (2 errors) ====
    import ext = require('typeofExternalModules_external');
    import exp = require('typeofExternalModules_exportAssign');
    
    var y1: typeof ext = ext;
    y1 = exp;
    ~~
!!! typeofExternalModules_core.ts(5,1): error TS2012: Cannot convert 'typeof exp' to 'typeof ext':
!!! 	Type 'typeof exp' is missing property 'C' from type 'typeof ext'.
    var y2: typeof exp = exp;
    y2 = ext;
    ~~
!!! typeofExternalModules_core.ts(7,1): error TS2012: Cannot convert 'typeof ext' to 'typeof exp':
!!! 	Type 'typeof ext' is missing property 'prototype' from type 'typeof exp'.
==== tests/cases/compiler/typeofExternalModules_external.ts (0 errors) ====
    export class C { }
    
==== tests/cases/compiler/typeofExternalModules_exportAssign.ts (0 errors) ====
    class D { }
    export = D;
    